--- a/branches/roddy/skins/tinymce.css
+++ b/branches/roddy/skins/tinymce.css
@@ -2,10 +2,6 @@
     font-size: 12px;
     font-family: "sans serif",tahoma,verdana,helvetica;
 }
-.ke-common-icon {
-    background-repeat: no-repeat;
-    overflow: hidden;
-}
 .ke-icon-source {
     background-position: -260px 0px;
     width: 20px;
@@ -315,12 +311,19 @@
     background-color: #FFFFFF;
 }
 .ke-icon {
+    display: block;
     border: 1px solid #F0F0EE;
     padding: 0px;
     margin: 1px;
     cursor: pointer;
 }
+.ke-common-icon {
+    display: block;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
 .ke-icon-selected {
+    display: block;
     border: 1px solid #1F3D74;
     background-color: #B2BBD0;
     padding: 0px;
@@ -328,9 +331,11 @@
     cursor: pointer;
 }
 .ke-icon-disabled {
+    display: block;
     border: 1px solid #F0F0EE;
     padding: 0;
     margin: 1px;
+    cursor: default;
 }
 .ke-menu {
     border-top: 2px solid #DDDDDD;
